[gd_scene load_steps=35 format=2]

[ext_resource path="res://Enemies/Enemy.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Fighter.gd" type="Script" id=2]
[ext_resource path="res://Hitboxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/AI/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Utilities/font.tres" type="DynamicFont" id=6]
[ext_resource path="res://Hitboxes/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sounds/sword_slash.mp3" type="AudioStream" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 144, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 192, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 240, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 144, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 192, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 240, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 288, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 336, 96, 48, 48 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=21]
radius = 2.0
height = 2.00001

[sub_resource type="CapsuleShape2D" id=22]
radius = 4.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=23]
radius = 5.0
height = 6.0

[sub_resource type="CircleShape2D" id=24]
radius = 100.0

[sub_resource type="CircleShape2D" id=25]
radius = 19.0263

[node name="Fighter" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource( 2 )
ACCELERATION = 480
MAX_SPEED = 16

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 2 )
frames = SubResource( 20 )
animation = "Attack"
offset = Vector2( 0, -7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 21 )

[node name="AttackTimer" type="Timer" parent="."]

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 0, -5 )

[node name="Hitbox" parent="HitboxPivot" instance=ExtResource( 7 )]
visible = false
collision_mask = 4
damage = 5

[node name="CollisionShape2D" parent="HitboxPivot/Hitbox" index="0"]
position = Vector2( 7, 0 )
shape = SubResource( 22 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, 2 )
collision_layer = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -7 )
shape = SubResource( 23 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 1

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 0, -5 )
shape = SubResource( 24 )

[node name="AttackDetectionZone" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CollisionShape2D" parent="AttackDetectionZone" index="0"]
position = Vector2( 0, -5 )
shape = SubResource( 25 )

[node name="StateLabel" type="Label" parent="."]
margin_left = -20.0
margin_top = -28.0
margin_right = 20.0
margin_bottom = -14.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Idle"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WanderController" parent="." instance=ExtResource( 8 )]

[node name="Sound_Attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -25.243
bus = "Effects"

[connection signal="state_changed" from="." to="." method="_on_Enemy_1_state_changed"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HitboxPivot/Hitbox"]
[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="AttackDetectionZone"]
